--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
+    "@types/jspdf": "^1.3.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
